--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "create-react-class": "^15.6.2",
+    "express": "4.15.2",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.20.0",
     "prop-types": "^15.6.0",
@@ -15,7 +16,8 @@
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "socket.io": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
