--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "uuid": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
